fix: fix highlight broken when text wraps

--- a/frontend/src/components/common/text-area/TextArea.module.scss
+++ b/frontend/src/components/common/text-area/TextArea.module.scss
@@ -36,7 +36,7 @@
     border-color: transparent;
     pointer-events: none;
     z-index: -1;
-    white-space: pre;
+    white-space: pre-wrap;
     p {
       color: transparent;
       font-size: 1rem;
